update vercel and cookies issue

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,5 +1,12 @@
 {
   "rewrites": [
-    { "source": "/(.*)", "destination": "/" }
+    {
+      "source": "/api/v1/(.*)",
+      "destination": "https://restro-rr7s.onrender.com/api/v1/$1"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/"
+    }
   ]
 }
